2003-04-18  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Add cvs suffix back to version.
	* doc/TODO: Add a few items.

2003-04-18

	* AVRDUDE 4.1.0 has been released (cvs release tag is "release_4_1_0").

2003-04-17  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Set version to 4.1.0.
	* doc/avrdude.texi: Add note about avr910 programmer type.

2003-04-17  Eric B. Weddington  <eric@umginc.net>

	* NEWS: Replace TBD with new release version.

2003-04-17  Eric B. Weddington  <eric@umginc.net>

	* avrdude.conf.in: Change name of pony programmer to pony-stk200
	to better describe the hardware (PonyProg is software that works
	with various hardware).

2003-04-16  Eric B. Weddington  <eric@umginc.net>

	* avrdude.conf.in: Add support for ATtiny26
	Submitted by Artur Lipowski <LAL@pro.onet.pl>
	* NEWS: List new devices supported: ATtiny26

2003-04-16  Eric B. Weddington <eric@umginc.net>

	* avrdude.conf.in: Add support for ATmega8535
	Submitted by Alexander Peter <apeter@gmx.de>
	* NEWS: List new devices supported: ATmega8535

2003-04-09  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Reading a 16 bit word in paged load needs to swap the
	bytes since the 'R' command returns MSB first and the internal buffer
	stores LSB first.

2003-04-07  Theodore A. Roth  <troth@openavr.org>

	* stk500.c: Don't print out read/write byte progress unless the verbose
	option is given.

2003-04-05  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Re-add the avr910 byte read/write methods which were 
	removed in my previous patch. Terminal mode read/writes are broken
	without those methods. D'oh!

2003-04-05  Theodore A. Roth  <troth@openavr.org>

	* avr910.c: Refactor to allow probing for auto addr increment. If auto
	incr supported by programmer hw, don't send addr for every byte.

2003-04-03  Eric B. Weddington <eric@umginc.net>
	
	* confwin.c: Fix bug that allows garbage for non-existent user
	config filename on Windows.
